After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758390 - multifilesink: fix spelling on multi_file_sink_next_type variable
multifilesink: fix spelling on multi_file_sink_next_type variable
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Mac OS
: Normal minor
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-20 12:46 UTC by minfrin
Modified: 2015-11-23 11:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix spelling on multi_file_sink_next_type variable. (1.40 KB, patch)
2015-11-20 12:46 UTC, minfrin
committed Details | Review

Description minfrin 2015-11-20 12:46:39 UTC
Created attachment 315965 [details] [review]
Fix spelling on multi_file_sink_next_type variable.

Fix spelling on multi_file_sink_next_type variable.
Comment 1 Tim-Philipp Müller 2015-11-23 11:38:13 UTC
Pushed, thanks for the patch!

commit 1a55fd42af6d4d76166f7fc80ed3f9afe8cec616
Author: Graham Leggett <minfrin@sharp.fm>
Date:   Fri Nov 20 12:44:22 2015 +0000

    multifilesink: fix spelling of variable
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758390