multifilesink: fix spelling of variable

https://bugzilla.gnome.org/show_bug.cgi?id=758390